# ge-drive-visualizer

./: .gitignore  CMakeLists.txt  DriveTour.kml  PointMove.kml  README.md  example_compare_two_positions.m  example_drone_lidar_animation.m  example_vehicle_animation.m  example_vehicle_lidar.m  example_vehicle_lidar_animation.m  package.xml  test_gen_kml.m  test_gen_kml_model.m  test_gen_kml_point.m
+kml/: AnimatedUpdate.m  AnimatedUpdateCube.m  AnimatedUpdateModel.m  AnimatedUpdatePoint.m  Camera.m  Cube.m  FlyTo.m  Legend.m  Line.m  LookAt.m  Model.m  Out.m  Placemark.m  Point.m  ScreenOverlay.m  Tour.m  Wait.m  WrapFlyTo.m  WrapFolder.m  WrapTour.m  calcCubeVertices.m  col2hex.m  unwrap360.m  wrapTo180.m  wrapTo720.m
data/vehicle/: reference.csv  rtk.pos
data/vehicle_tokyo/: reference.csv  spp.pos
docs/: index.html  style.css
docs/assets/: hero.webm
examples/: CMakeLists.txt  example_vehicle_animation.cpp
test/: test_AnimatedUpdateCube.m  test_AnimatedUpdateModel.m  test_AnimatedUpdatePoint.m  test_Cube.m  test_Legend.m
tests/: CMakeLists.txt  test_kml_standalone.cpp
